# crammer

./: .gitignore  README.md  crammer.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
crammer/: __init__.py  __main__.py
crammer/core/: __init__.py  generator.py  models.py  question_selector.py  validator.py
crammer/data/: __init__.py  csv_store.py  json_store.py  repositories.py
crammer/gui/: __init__.py  app.py  dialogs.py
crammer/gui/tabs/: __init__.py  classes_tab.py  generate_tab.py  questions_tab.py  templates_tab.py
crammer/gui/widgets/: __init__.py  png_image.py
crammer/i18n/: translator.py
crammer/i18n/locales/: en.json  pt_br.json
crammer/pdf/: __init__.py  asset_manager.py  latex_compiler.py  latex_renderer.py
crammer/utils/: __init__.py  logger.py  paths.py  version.py
data/: config.json
data/templates/: gaDFFafFA.json
resources/assets/: logo.tex
resources/templates/: default.tex
